# assisted-installer-deployment

./: .editorconfig  .gitignore  .pylintrc  AUTHORS  CONTRIBUTING.md  ChangeLog  Dockerfile.assisted-installer-deployment  Dockerfile.build  Jenkinsfile.clean_old_issues  Jenkinsfile.daily_latest  Jenkinsfile.daily_repositories_snapshot  Jenkinsfile.default_release_update  Jenkinsfile.download_logs  Jenkinsfile.ocp_version_update  Makefile  Makefile.skipper  OWNERS  OWNERS_ALIASES  README.md  assisted-installer.yaml  build_deploy.sh  dev-requirements.in  dev-requirements.txt  gittools.py  lateat_pipline  latest_pipeline  pyproject.toml  requirements-rht.txt  requirements.in  requirements.txt  setup.cfg  setup.py  setup_env.sh  skipper.env  skipper.yaml  tag_all.py  target_saas.yaml  triage_resolving_filters.json
.github/: dependabot.yml
ccx/: install.sh
release/: gittools.py  main.py
tools/: add_pr_link_to_jira.py  add_triage_signature.py  assisted_installer_stable_promotion.py  bump_ocp_releases.py  check_ai_images.py  ci_status_report.py  close_by_signature.py  consts.py  create_testgrid_tickets.py  create_triage_tickets.py  custom_openshift_images.json  github_prs_stats.py  jira_cmd.py  new_minor_OCP_version.py  ocm-ai-update-issue-md  release_tickets.py  skopeo.py  skopeo_utils.py  test_add_triage_signature.py  test_ci_status_report.py  trace_go_mod_dependencies.py  triage_stats.py  triage_status_report.py  update_assisted_installer_yaml.py  update_default_release_versions_to_latest.py  update_hash.py  update_images_tag.py  update_images_to_latest.py  update_ocp_versions.py  update_saas_target.py  update_stable_tags.py  utils.py  version_docomentaion.py  version_documentation.py
tools/jira_client/: __init__.py  consts.py  jira_api.py  jira_client_factory.py  jira_dryrun_client.py
tools/triage/: __init__.py  add_triage_signature.py  attach_logs_in_jira.py  clean_old_issues.py  close_by_signature.py  (+6 more)
versions_documentation/: version_documentation_v1.0.9.4_to_v1.0.9.5
(+40 files in other folders)
