[metadata]
name = assisted-installer-release
author = Eran Cohen
author-email = eranco@redhat.com
home-page = https://github.com/openshift-assisted/assisted-installer-deployment
summary = Release and deploy openshift assisted installer
license = Apache-2

requires-dist = setuptools

[files]
packages = 
    release

[entry_points]
console_scripts = 
    release = release.main:main

[pycodestyle]
max-line-length=145
