[metadata]
name = assisted-installer-release
author = Eran Cohen
author-email = eranco@redhat.com
home-page = https://github.com/openshift-assisted/assisted-installer-deployment
summary = Release and deploy openshift assisted installer
license = Apache-2

requires-dist = setuptools

[files]
packages = 
    release
    tools

[entry_points]
console_scripts = 
    release = release.main:main
    triage_status_report = tools.triage_status_report:main
    bump_ocp_releases = tools.bump_ocp_releases:main

[flake8]
max-line-length=145
